--- a/qontrol/qontrol.qrc
+++ b/qontrol/qontrol.qrc
@@ -20,6 +20,7 @@
     <file>icons/elm_int.png</file>
     <file>icons/elm_string.png</file>
     <file>icons/elm_none.png</file>
+    <file>icons/elm_scheme.png</file>
     <file>icons/elm_simul_0.png</file>
     <file>icons/elm_simul_1.png</file>
     <file>icons/elm_simul_2.png</file>
@@ -57,6 +58,7 @@
     <file>icons/elm_toutarr_4.png</file>
     <file>icons/elm_toutputany.png</file>
     <file>icons/elm_tpid.png</file>
+    <file>icons/elm_tquadextr.png</file>
     <file>icons/elm_trand.png</file>
     <file>icons/elm_trandtrigg.png</file>
     <file>icons/elm_trelaxgen.png</file>
@@ -94,7 +96,6 @@
     <file>icons/mod_open1.png</file>
     <file>icons/mod_save.png</file>
     <file>icons/mod_save1.png</file>
-    <file>icons/model.png</file>
     <file>icons/modelnew.png</file>
     <file>icons/newelm.png</file>
     <file>icons/newgraph.png</file>
