Add TMaxNum and test for it.
Rework tests.

--- a/qontrol/qontrol.qrc
+++ b/qontrol/qontrol.qrc
@@ -49,6 +49,7 @@
     <file>icons/elm_tlogic.png</file>
     <file>icons/elm_tlorenz.png</file>
     <file>icons/elm_trossler.png</file>
+    <file>icons/elm_tmaxnum.png</file>
     <file>icons/elm_tmultipl.png</file>
     <file>icons/elm_toutarr.png</file>
     <file>icons/elm_toutarr_0.png</file>
