--- a/qontrol/qontrol.qrc
+++ b/qontrol/qontrol.qrc
@@ -66,6 +66,7 @@
     <file>icons/elm_trootdata.png</file>
     <file>icons/elm_tsource.png</file>
     <file>icons/elm_tsourcelin.png</file>
+    <file>icons/elm_tsubscheme.png</file>
     <file>icons/elm_tsum8.png</file>
     <file>icons/elm_tswitch.png</file>
     <file>icons/elm_ttrigger.png</file>
