--- a/qontrol/qontrol.qrc
+++ b/qontrol/qontrol.qrc
@@ -17,6 +17,7 @@
     <file>icons/elm.png</file>
     <file>icons/elm_double.png</file>
     <file>icons/elm_inputparam.png</file>
+    <file>icons/elm_inputsimple.png</file>
     <file>icons/elm_int.png</file>
     <file>icons/elm_string.png</file>
     <file>icons/elm_none.png</file>
@@ -25,6 +26,7 @@
     <file>icons/elm_simul_1.png</file>
     <file>icons/elm_simul_2.png</file>
     <file>icons/elm_simul_3.png</file>
+    <file>icons/elm_suboutput.png</file>
     <file>icons/elm_tadjgen.png</file>
     <file>icons/elm_tcorranalysis.png</file>
     <file>icons/elm_tcounter.png</file>
