Add TSumN element.
Summarizes arbitrary number on inputs.

--- a/qontrol/qontrol.qrc
+++ b/qontrol/qontrol.qrc
@@ -70,6 +70,7 @@
     <file>icons/elm_tsourcelin.png</file>
     <file>icons/elm_tsubscheme.png</file>
     <file>icons/elm_tsum8.png</file>
+    <file>icons/elm_tsumn.png</file>
     <file>icons/elm_tswitch.png</file>
     <file>icons/elm_ttrigger.png</file>
     <file>icons/elm_tthrum.png</file>
