--- a/qontrol/qontrol.qrc
+++ b/qontrol/qontrol.qrc
@@ -2,20 +2,8 @@
 <RCC version="1.0">
 <qresource>
     <file>icons/about.png</file>
-    <file>icons/about1.png</file>
-    <file>icons/app.png</file>
-    <file>icons/aver.png</file>
-    <file>icons/chaoswav.png</file>
-    <file>icons/data.png</file>
-    <file>icons/delelm.png</file>
-    <file>icons/delgraph.png</file>
-    <file>icons/delout.png</file>
     <file>icons/edit-clone.png</file>
-    <file>icons/editelm.png</file>
-    <file>icons/editgraph.png</file>
     <file>icons/editmodel.png</file>
-    <file>icons/editout.png</file>
-    <file>icons/elm.png</file>
     <file>icons/elm_color.png</file>
     <file>icons/elm_double.png</file>
     <file>icons/elm_double_arr.png</file>
@@ -50,7 +38,6 @@
     <file>icons/elm_tfunctrans.png</file>
     <file>icons/elm_tgraph.png</file>
     <file>icons/elm_thyst.png</file>
-    <file>icons/elm_tinputany.png</file>
     <file>icons/elm_tintegrator.png</file>
     <file>icons/elm_tlatch.png</file>
     <file>icons/elm_tlinear.png</file>
@@ -66,7 +53,6 @@
     <file>icons/elm_toutarr_2.png</file>
     <file>icons/elm_toutarr_3.png</file>
     <file>icons/elm_toutarr_4.png</file>
-    <file>icons/elm_toutputany.png</file>
     <file>icons/elm_tpid.png</file>
     <file>icons/elm_tquadextr.png</file>
     <file>icons/elm_trand.png</file>
@@ -86,39 +72,16 @@
     <file>icons/empty.png</file>
     <file>icons/exit.png</file>
     <file>icons/export.png</file>
-    <file>icons/extrem.png</file>
     <file>icons/filenew.png</file>
-    <file>icons/fileopen.png</file>
-    <file>icons/filesave.png</file>
-    <file>icons/graph.png</file>
-    <file>icons/hyst_l.png</file>
-    <file>icons/hyst_m.png</file>
-    <file>icons/infoelm.png</file>
-    <file>icons/ld1.png</file>
-    <file>icons/linkelm.png</file>
-    <file>icons/lock.png</file>
+    <file>icons/info-obj.png</file>
     <file>icons/lockelm.png</file>
-    <file>icons/log.png</file>
-    <file>icons/lp2q3.png</file>
     <file>icons/markelm.png</file>
-    <file>icons/mini-mo2q2.png</file>
-    <file>icons/miso.png</file>
-    <file>icons/mo2q2.png</file>
-    <file>icons/mod_open.png</file>
-    <file>icons/mod_open1.png</file>
-    <file>icons/mod_save.png</file>
-    <file>icons/mod_save1.png</file>
     <file>icons/modelnew.png</file>
     <file>icons/newelm.png</file>
     <file>icons/newgraph.png</file>
     <file>icons/newout.png</file>
     <file>icons/orderelm.png</file>
-    <file>icons/out.png</file>
-    <file>icons/plot.png</file>
-    <file>icons/run_p1.png</file>
-    <file>icons/run_p2.png</file>
     <file>icons/run.png</file>
-    <file>icons/run0.png</file>
     <file>icons/scale.png</file>
     <file>icons/showgraph.png</file>
     <file>icons/showgraphdata.png</file>
