--- a/qontrol/qontrol.qrc
+++ b/qontrol/qontrol.qrc
@@ -7,6 +7,7 @@
     <file>icons/elm_color.png</file>
     <file>icons/elm_double.png</file>
     <file>icons/elm_double_arr.png</file>
+    <file>icons/elm_graphelem.png</file>
     <file>icons/elm_inputparam.png</file>
     <file>icons/elm_inputsimple.png</file>
     <file>icons/elm_int.png</file>
