--- a/qontrol/qontrol.qrc
+++ b/qontrol/qontrol.qrc
@@ -16,6 +16,7 @@
     <file>icons/elm_string.png</file>
     <file>icons/elm_string_arr.png</file>
     <file>icons/elm_none.png</file>
+    <file>icons/elm_scaledata.png</file>
     <file>icons/elm_scheme.png</file>
     <file>icons/elm_simul_0.png</file>
     <file>icons/elm_simul_1.png</file>
