--- a/qontrol/qontrol.qrc
+++ b/qontrol/qontrol.qrc
@@ -30,6 +30,7 @@
     <file>icons/elm_tcorranalysis.png</file>
     <file>icons/elm_tcounter.png</file>
     <file>icons/elm_tcriterion.png</file>
+    <file>icons/elm_tfilesimple.png</file>
     <file>icons/elm_tfilesource.png</file>
     <file>icons/elm_tdatacontainer.png</file>
     <file>icons/elm_tdelay.png</file>
