Add TQuality, fix simulation init.

--- a/qontrol/qontrol.qrc
+++ b/qontrol/qontrol.qrc
@@ -61,6 +61,7 @@
     <file>icons/elm_toutarr_4.png</file>
     <file>icons/elm_tpid.png</file>
     <file>icons/elm_tquadextr.png</file>
+    <file>icons/elm_tquality.png</file>
     <file>icons/elm_trand.png</file>
     <file>icons/elm_trandtrigg.png</file>
     <file>icons/elm_trelaxgen.png</file>
