Add TExtrTest - near to empty now.

--- a/qontrol/qontrol.qrc
+++ b/qontrol/qontrol.qrc
@@ -38,6 +38,7 @@
     <file>icons/elm_tdelay.png</file>
     <file>icons/elm_tdiffin.png</file>
     <file>icons/elm_textrlatch.png</file>
+    <file>icons/elm_textrtest.png</file>
     <file>icons/elm_tfourier.png</file>
     <file>icons/elm_tfriction.png</file>
     <file>icons/elm_tfuncmisc.png</file>
