Add TBarrier element.
And fix barrirs functions.

--- a/qontrol/qontrol.qrc
+++ b/qontrol/qontrol.qrc
@@ -27,6 +27,7 @@
     <file>icons/elm_suboutput.png</file>
     <file>icons/elm_switch.png</file>
     <file>icons/elm_tadjgen.png</file>
+    <file>icons/elm_tbarrier.png</file>
     <file>icons/elm_tcorranalysis.png</file>
     <file>icons/elm_tcounter.png</file>
     <file>icons/elm_tcriterion.png</file>
