--- a/qontrol/qontrol.qrc
+++ b/qontrol/qontrol.qrc
@@ -71,6 +71,7 @@
     <file>icons/elm_trandtrigg.png</file>
     <file>icons/elm_trelaxgen.png</file>
     <file>icons/elm_trootdata.png</file>
+    <file>icons/elm_tsearcher.png</file>
     <file>icons/elm_tsource.png</file>
     <file>icons/elm_tsourcelin.png</file>
     <file>icons/elm_tsubscheme.png</file>
