--- a/qontrol/qontrol.qrc
+++ b/qontrol/qontrol.qrc
@@ -38,6 +38,7 @@
     <file>icons/elm_tdatacontainer.png</file>
     <file>icons/elm_tdelay.png</file>
     <file>icons/elm_tdiffin.png</file>
+    <file>icons/elm_terrmeasure.png</file>
     <file>icons/elm_textrlatch.png</file>
     <file>icons/elm_textrtest.png</file>
     <file>icons/elm_tfourier.png</file>
