More InputLogic usage.
TConter redesign.
Need TTrigger and tRandTrigger redesign.

--- a/qontrol/qontrol.qrc
+++ b/qontrol/qontrol.qrc
@@ -10,6 +10,7 @@
     <file>icons/elm_graphelem.png</file>
     <file>icons/elm_inputparam.png</file>
     <file>icons/elm_inputsimple.png</file>
+    <file>icons/elm_inputlogic.png</file>
     <file>icons/elm_int.png</file>
     <file>icons/elm_int_arr.png</file>
     <file>icons/elm_list.png</file>
