Prepare to add TMovingCorr.
Simplify TCircBuf usage (in TDelay) using C++11.

--- a/qontrol/qontrol.qrc
+++ b/qontrol/qontrol.qrc
@@ -60,6 +60,7 @@
     <file>icons/elm_tmaxnum.png</file>
     <file>icons/elm_tmultipl.png</file>
     <file>icons/elm_tmulsumn.png</file>
+    <file>icons/elm_tmovingcorr.png</file>
     <file>icons/elm_toutarr.png</file>
     <file>icons/elm_toutarr_0.png</file>
     <file>icons/elm_toutarr_1.png</file>
