--- a/qontrol/qontrol.qrc
+++ b/qontrol/qontrol.qrc
@@ -29,6 +29,7 @@
     <file>icons/elm_switch.png</file>
     <file>icons/elm_tadjgen.png</file>
     <file>icons/elm_tbarrier.png</file>
+    <file>icons/elm_tbjt.png</file>
     <file>icons/elm_tcorranalysis.png</file>
     <file>icons/elm_tcounter.png</file>
     <file>icons/elm_tcriterion.png</file>
