--- a/qontrol/qontrol.qrc
+++ b/qontrol/qontrol.qrc
@@ -5,6 +5,7 @@
     <file>icons/edit-clone.png</file>
     <file>icons/editmodel.png</file>
     <file>icons/elm_color.png</file>
+    <file>icons/elm_datapool.png</file>
     <file>icons/elm_double.png</file>
     <file>icons/elm_double_arr.png</file>
     <file>icons/elm_graphelem.png</file>
