Add initial TIIR7

--- a/qontrol/qontrol.qrc
+++ b/qontrol/qontrol.qrc
@@ -55,6 +55,7 @@
     <file>icons/elm_tfunctrans.png</file>
     <file>icons/elm_tgraph.png</file>
     <file>icons/elm_thyst.png</file>
+    <file>icons/elm_tiir7.png</file>
     <file>icons/elm_time.png</file>
     <file>icons/elm_tintegrator.png</file>
     <file>icons/elm_tlatch.png</file>
